moved to <a> element and fixed another alignment issue

--- a/app/assets/stylesheets/framework/mobile.scss
+++ b/app/assets/stylesheets/framework/mobile.scss
@@ -98,6 +98,14 @@
   }
 }
 
+@media (max-width: 809px) {
+  .issues-filters {
+    .labels-filter {
+      display: none;
+    }
+  }
+}
+
 @media (max-width: $screen-sm-max) {
   .issues-filters {
     .milestone-filter {
